# BMATDevTest

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
postman_helpers/: BMATTest.postman_collection.json  (+1 more)
src/: .flake8  pyproject.toml  pytest.ini
src/apps/core/exceptions/: api.py
src/apps/core/factories/: __init__.py  user_factories.py
src/apps/core/helpers/: __init__.py  storage_helpers.py
src/apps/core/helpers/api/tests/: __init__.py  base.py
src/apps/core/management/commands/: demo_file.py
src/apps/core/models/: __init__.py  abstract.py
src/apps/data_processor/: apps.py
src/apps/data_processor/admin/: __init__.py  csv_task_admin.py
src/apps/data_processor/api/: urls.py
src/apps/data_processor/api/serializers/: __init__.py  csv_task_serializers.py
src/apps/data_processor/api/views/: __init__.py  csv_task_views.py
src/apps/data_processor/factories/: __init__.py  csv_task_factories.py
src/apps/data_processor/migrations/: 0001_initial.py
src/apps/data_processor/models/: __init__.py  csv_task.py
src/apps/data_processor/models/tests/: test_csv_task.py
src/apps/data_processor/tasks/: __init__.py  process_csv.py
src/apps/data_processor/tasks/tests/: test_process_csv.py
src/backend/: prompt.py  urls.py
src/backend/celery_backend/: celery.py
src/backend/settings/: jet_configuration.py  settings.py
src/backend/templates/admin/: base_site.html
src/backend/templates/admin/account/: account_add_opportunity_first_step.html  account_change_form.html
src/locale/es/LC_MESSAGES/: django.mo  django.po
(+11 files in other folders)
